# Rali

./: .gitignore  Cargo.toml  PKGBUILD  README.md  drop_in_license  ops  root  update_repo.sh  version
man/: 1.org  rali.1  rali.1.org  rali.conf.1  rali.conf.1.org  rali.conf.5  rali.conf.5.org  rali.man
old_files/: Cargo.toml  PKGBUILD  archinstall.org  drop_in_license
old_files/man/: rali.1.org  rali.conf.5  rali.conf.5.org
old_files/pkg/rali-testing/: .BUILDINFO  .MTREE  .PKGINFO
old_files/src/: lib.rs  main.rs  mbr.rs  parted.rs  user_ops.rs
old_files/src/menus/: lang_vars.rs~  local.rs~  mirrors.rs  timezones.rs  user_ops.rs
old_files/src/user_ops/: users.rs
src/: lib.rs  main.rs  mbr.rs  menus.rs  mirrors.rs  packages.rs  parted.rs  toml_opps.rs  user_ops.rs
src/menus/: lang_vars.rs  local.rs  mirrors.rs  sysops.rs  timezones.rs  user_ops.rs
src/user_ops/: drives.rs  sysops.rs  users.rs
